--- a/2. [Then Go Here] Additional Instructions.md
+++ b/2. [Then Go Here] Additional Instructions.md
@@ -6,7 +6,7 @@ You've got your Technic Solder Distribution Server configured and accessible. Bu
 
 2. using wget do to copy the script into this folder
 
-        wget https://github.com/kreezxil/Technic-Solder-Support/blob/master/Scripts/mkArchive.sh
+        wget https://raw.githubusercontent.com/kreezxil/Technic-Solder-Support/master/Scripts/mkArchive.sh
 
 4. Make it executable
 
